src/test/deca/context/invalid/classes/class_extends_unknown.deca
// Description :
//    Classe héritant d'une classe inexistante.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 8 : Super-classe UnknownClass non déclarée

class A extends UnknownClass {
    int x;
}

{
}

